# OpenPerformance

./: .coverage  .gitignore  ARCHITECTURE.md  DEMO_SUMMARY.md  Dockerfile  ENTERPRISE_DEPLOYMENT_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLATFORM_SUMMARY.md  PUBLICATION_GUIDE.md  QUICK_START.md  README.md  RELEASE_READY.md  SECURITY.md  alembic.ini  config.env.example  coverage.xml  deploy.sh  dev-requirements.txt  docker-compose.override.yml  docker-compose.yml  final_platform_validation.json  fix_imports.py  fix_metadata.py  hatch.toml  main.txt  mkdocs.yml  platform_status.py  platform_status_report.json  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py  start_platform.py  system_health_report_20250529_205331.json  system_health_report_20250529_211135.json  system_health_report_20250529_211159.json  system_health_report_20250529_211306.json  system_health_report_20250529_211707.json  (+6 more)
.github/workflows/: ci.yml  dependency-update.yml  docker.yml  pages.yml  performance-monitoring.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile
docs/: index.md
examples/: shell_gpt_demo.py
frontend/src/components/: PerformanceDashboard.jsx
k8s/: deployment.yaml  namespace.yaml
python/mlperf/: __init__.py
python/mlperf/agents/: base.py
python/mlperf/api/: main.py
python/mlperf/auth/: models.py  schemas.py  security.py
python/mlperf/cli/: README.md  main.py
python/mlperf/hardware/: __init__.py
python/mlperf/models/: project.py
python/mlperf/optimization/: distributed.py
python/mlperf/utils/: config.py  logging.py
python/tests/: test_distributed.py
results/distributed-benchmarks/: distributed-benchmarks.json
results/inference-benchmarks/: inference-benchmarks.json
results/training-benchmarks/: training-benchmarks.json
scripts/: deploy.py  publish_pypi.py  run_all_benchmarks.sh  setup.sh
scripts/benchmarks/: distributed_benchmark.py  inference_benchmark.py  memory_profiling.py  training_benchmark.py
tests/: test_distributed.py  test_hardware.py  test_integration.py
tests/performance/: test_distributed_benchmarks.py  test_inference_benchmarks.py  test_training_benchmarks.py
tools/: performance_analysis.py
